--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,16 @@
     <string name="btn_login">Login</string>
     <string name="btn_help">\?</string>
     <string name="btn_forgot"><u>Forgot password</u></string>
-    <string name="btn_std_info">Thay đổi thông tin sinh viên</string>
+    <string name="btn_std_info">Thông tin sinh viên</string>
     <string name="btn_lichhoc">Xem lịch học</string>
     <string name="btn_diem">Xem điểm</string>
     <string name="btn_feedback">Feedback</string>
-    <string name="btn_Logout">Logout</string>
+    <string name="btn_logout">Logout</string>
+    <string name="txt_studyresult">Tổng hợp kết quả học tập \n&amp; rèn luyện đạo đức</string>
+    <string name="btn_ltr_info">Thông tin giảng viên</string>
+    <string name="btn_lichday">Xem lịch giảng dạy</string>
+    <string name="btn_doc_sharing">Chia sẻ tài liệu</string>
+    <string name="upload_syllabus">Khung chương trình</string>
+    <string name="upload_lecture_note">Tài liệu bài giảng</string>
+    <string name="ls_lecture">Xem môn học</string>
 </resources>
